--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
         volumes:
             - .:/go/src/neoway
         working_dir: /go/src/neoway
-        command: ["./wait-for-it.sh", "db:5432", "--", "go", "run", "main.go"]
+        command: ["./wait-for-it.sh", "db:5432", "--", "go", "run", "main.go", "base_teste.txt"]
     
