--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         - POSTGRES_DB=neoway
       ports:
         - "5430:5432"
+      # Create the table in PostgreSQL
       volumes:
         - ./sql/create-table.sql:/docker-entrypoint-initdb.d/1-init.sql
       deploy:
